# graphql-ingest

./: CHANGELOG.md  CONTRIBUTE.md  LICENSE  QUICKSTART.md  README.md  REPOSITORY_FIXES.md  TESTING_SETUP.md  _version.py  cli.py  config.py  csvgql.py  pyproject.toml  repo_structure_plan.md  server.py  setup.py
.github/workflows/: ci.yml
data/: sample_data.csv
src/: __init__.py  cli.py  database.py  graphql_schema.py  server.py
tests/: integration_test_examples.py  test_basic.py
